[project]
name = "doesp-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyterlab>=4.5.6",
    "scrapy>=2.14.2",
    "scrapy-playwright>=0.0.46",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "ipdb>=0.13.13",
    "isort>=8.0.1",
    "prettier>=0.0.7",
]
